f: fixed text align on contacts page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,6 +251,7 @@ main {
     margin-top: 15px;
     margin-bottom: 5px;
     text-align: left;
+    text-align: left;
 }
 
 #contacts-box a {
